--- a/codeIntelliJ/build.gradle
+++ b/codeIntelliJ/build.gradle
@@ -21,7 +21,8 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+    //hachage : Bcrypt
+    implementation 'org.springframework.security:spring-security-crypto:5.2.0.RELEASE'
 }
 
 test {
