modif code côté client et serveur

--- a/codeIntelliJ/src/main/resources/application.properties
+++ b/codeIntelliJ/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#configurations de la base de données
+#configurations de la base de données =jdbc:mysql://localhost:3306/occ_fermetures?serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://localhost:3306/occ_fermetures?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password
 #permet d afficher que ce qui est non null dans le json
 spring.jackson.default-property-inclusion=non_null
